--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="nav flex justify-content align-item">
-        <img class="logoimg inverted" src="/spotify/logo.svg" alt="spotify Logo"></img>
+        <img class="logoimg inverted" src="/logo.svg" alt="spotify Logo"></img>
         <button class="home-logo">
             <i class="fa-solid fa-house" id="house-logo"></i>
         </button>
@@ -24,7 +24,7 @@
                 <input type="text" placeholder="What do want to play?" class="search-bar">
             </div>
             <div class="container3">
-                <img class="lib inverted-half" src="/spotify/lib.svg" alt="">
+                <img class="lib inverted-half" src="/lib.svg" alt="">
             </div>
             
         </div>
@@ -42,7 +42,7 @@
         <div class="left border-radius ">
             <header class="header flex justify-content align-item">
                 <div class="head flex justify-content align-item">
-                    <button type="button" class=" iB1 flex"><img src="/spotify/library.svg" alt="library" class="library inverted-half">Your Library</button>
+                    <button type="button" class=" iB1 flex"><img src="/library.svg" alt="library" class="library inverted-half">Your Library</button>
                     <button type="button" class="plus flex justify-content align-item">+</button>
                 </div>    
             </header>
@@ -87,8 +87,8 @@
                             <!-- <i class="fa-solid fa-music s-play"></i> -->
                             <div class="contain songlist1">
                                 <h4 class="title">
-                                    <h2 style="color: #fff; font-size: xx-large;">Song name</h2>
-                                    <h4 style="color: #ffffff96; font-size: medium;">Artist</h4>
+                                    <h2 style="color: #fff;">Song name</h2>
+                                    <h4 style="color: #ffffff96;">Artist</h4>
                                 </h4>
                             </div>
                         </div>
@@ -117,6 +117,6 @@
     </div>
     </div>
     
-    <script src="/spotify/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
